[gd_scene load_steps=33 format=3 uid="uid://ct4jjrlser3ln"]

[ext_resource type="Script" path="res://scenes/intro/intro.gd" id="1_ibh1t"]
[ext_resource type="Script" path="res://scenes/intro/ParallaxBackground.gd" id="2_1q0ev"]
[ext_resource type="Texture2D" uid="uid://bpbwi7fy1ns16" path="res://assets/sprites/intro/intro_spritesheet.png" id="3_66r6k"]
[ext_resource type="Texture2D" uid="uid://c1eb6en3kcglj" path="res://assets/sprites/intro/meteors.png" id="3_ie8x4"]
[ext_resource type="Texture2D" uid="uid://dfqgudmse5ukc" path="res://assets/sprites/intro/intro_title_spritesheet.png" id="3_t7p70"]
[ext_resource type="Theme" uid="uid://djla0tgj1q1be" path="res://assets/themes/UI_theme_PC.tres" id="6_rpnmg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hh1jx"]
atlas = ExtResource("3_66r6k")
region = Rect2(0, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvpis"]
atlas = ExtResource("3_66r6k")
region = Rect2(480, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_to44g"]
atlas = ExtResource("3_66r6k")
region = Rect2(960, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g0xt"]
atlas = ExtResource("3_66r6k")
region = Rect2(1440, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_x53su"]
atlas = ExtResource("3_66r6k")
region = Rect2(1920, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr1ye"]
atlas = ExtResource("3_66r6k")
region = Rect2(2400, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsolk"]
atlas = ExtResource("3_66r6k")
region = Rect2(2880, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0qg2"]
atlas = ExtResource("3_66r6k")
region = Rect2(3360, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_f31yk"]
atlas = ExtResource("3_66r6k")
region = Rect2(3840, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfxk7"]
atlas = ExtResource("3_66r6k")
region = Rect2(4320, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7dh4"]
atlas = ExtResource("3_66r6k")
region = Rect2(4800, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6igb"]
atlas = ExtResource("3_66r6k")
region = Rect2(5280, 0, 480, 270)

[sub_resource type="SpriteFrames" id="SpriteFrames_b6b3f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh1jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvpis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to44g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g0xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x53su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr1ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsolk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0qg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f31yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfxk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7dh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6igb")
}],
"loop": false,
"name": &"intro",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lokhu"]
atlas = ExtResource("3_t7p70")
region = Rect2(0, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_lps5b"]
atlas = ExtResource("3_t7p70")
region = Rect2(480, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t8mp"]
atlas = ExtResource("3_t7p70")
region = Rect2(960, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_boal0"]
atlas = ExtResource("3_t7p70")
region = Rect2(1440, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgdnm"]
atlas = ExtResource("3_t7p70")
region = Rect2(1920, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_qea8v"]
atlas = ExtResource("3_t7p70")
region = Rect2(2400, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie5sa"]
atlas = ExtResource("3_t7p70")
region = Rect2(2880, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew20x"]
atlas = ExtResource("3_t7p70")
region = Rect2(3360, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_501dq"]
atlas = ExtResource("3_t7p70")
region = Rect2(3840, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_2llri"]
atlas = ExtResource("3_t7p70")
region = Rect2(4320, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6lwn"]
atlas = ExtResource("3_t7p70")
region = Rect2(4800, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvuwd"]
atlas = ExtResource("3_t7p70")
region = Rect2(5280, 0, 480, 270)

[sub_resource type="SpriteFrames" id="SpriteFrames_vlede"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lokhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lps5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boal0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgdnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qea8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie5sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew20x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_501dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2llri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6lwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvuwd")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Intro" type="Node2D"]
script = ExtResource("1_ibh1t")
metadata/_edit_vertical_guides_ = [235.0]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_1q0ev")

[node name="AnimatedIntro" type="AnimatedSprite2D" parent="ParallaxBackground"]
sprite_frames = SubResource("SpriteFrames_b6b3f")
animation = &"intro"
autoplay = "intro"
centered = false
metadata/_edit_lock_ = true

[node name="StaticMeteors" type="TextureRect" parent="ParallaxBackground"]
offset_left = -44.0
offset_top = 6.0
offset_right = 427.0
offset_bottom = 140.0
texture = ExtResource("3_ie8x4")
metadata/_edit_lock_ = true

[node name="StaticMeteors2" type="TextureRect" parent="ParallaxBackground"]
offset_left = 443.0
offset_top = 6.0
offset_right = 914.0
offset_bottom = 140.0
texture = ExtResource("3_ie8x4")

[node name="Meteors" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(470, 0)

[node name="MeteorsTexture" type="TextureRect" parent="ParallaxBackground/Meteors"]
visible = false
offset_top = 7.0
offset_right = 471.0
offset_bottom = 141.0
texture = ExtResource("3_ie8x4")

[node name="AnimatedTitle" type="AnimatedSprite2D" parent="ParallaxBackground"]
sprite_frames = SubResource("SpriteFrames_vlede")
autoplay = "default"
centered = false
metadata/_edit_lock_ = true

[node name="PlayBtn" type="Button" parent="ParallaxBackground"]
visible = false
offset_left = 184.0
offset_top = 216.0
offset_right = 225.0
offset_bottom = 247.0
theme = ExtResource("6_rpnmg")
text = "Menu"

[node name="QuitBtn" type="Button" parent="ParallaxBackground"]
visible = false
offset_left = 248.0
offset_top = 216.0
offset_right = 290.0
offset_bottom = 247.0
theme = ExtResource("6_rpnmg")
text = "Quit"

[connection signal="animation_finished" from="ParallaxBackground/AnimatedIntro" to="." method="_on_animated_intro_animation_finished"]
[connection signal="pressed" from="ParallaxBackground/PlayBtn" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ParallaxBackground/QuitBtn" to="." method="_on_quit_pressed"]
